<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>EditLaunchersDialog</class>
 <widget class="QDialog" name="EditLaunchersDialog">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>820</width>
    <height>790</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Edit Launchers</string>
  </property>
  <widget class="QDialogButtonBox" name="buttonBox">
   <property name="geometry">
    <rect>
     <x>40</x>
     <y>720</y>
     <width>741</width>
     <height>35</height>
    </rect>
   </property>
   <property name="orientation">
    <enum>Qt::Orientation::Horizontal</enum>
   </property>
   <property name="standardButtons">
    <set>QDialogButtonBox::StandardButton::Apply|QDialogButtonBox::StandardButton::Cancel|QDialogButtonBox::StandardButton::Ok</set>
   </property>
   <property name="centerButtons">
    <bool>true</bool>
   </property>
  </widget>
  <widget class="QLabel" name="launchersNote">
   <property name="geometry">
    <rect>
     <x>20</x>
     <y>520</y>
     <width>771</width>
     <height>180</height>
    </rect>
   </property>
   <property name="text">
    <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Tips: &lt;/p&gt;&lt;ul style=&quot;margin-top: 0px; margin-bottom: 0px; margin-left: 0px; margin-right: 0px; -qt-list-indent: 1;&quot;&gt;&lt;li style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;To add a standard program launcher, either use drag-and-drop from Crystal Dock or Plasma application list to the launcher list, or right-click a running program on the dock panel then tick &amp;quot;Pinned&amp;quot;.&lt;/li&gt;&lt;li style=&quot; margin-top:0px; margin-bottom:12px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;Use drag-and-drop within the launcher list to re-order the items.&lt;/li&gt;&lt;/ul&gt;&lt;/body&gt;&lt;/html&gt;</string>
   </property>
   <property name="textFormat">
    <enum>Qt::TextFormat::RichText</enum>
   </property>
   <property name="wordWrap">
    <bool>true</bool>
   </property>
  </widget>
  <widget class="QPushButton" name="remove">
   <property name="geometry">
    <rect>
     <x>420</x>
     <y>325</y>
     <width>361</width>
     <height>40</height>
    </rect>
   </property>
   <property name="text">
    <string>Remove Selected</string>
   </property>
   <property name="icon">
    <iconset theme="list-remove"/>
   </property>
  </widget>
  <widget class="QPushButton" name="removeAll">
   <property name="geometry">
    <rect>
     <x>420</x>
     <y>405</y>
     <width>361</width>
     <height>40</height>
    </rect>
   </property>
   <property name="text">
    <string>Remove All</string>
   </property>
   <property name="icon">
    <iconset theme="edit-delete"/>
   </property>
  </widget>
  <widget class="QPushButton" name="addSeparator">
   <property name="geometry">
    <rect>
     <x>420</x>
     <y>165</y>
     <width>361</width>
     <height>40</height>
    </rect>
   </property>
   <property name="toolTip">
    <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;A regular separator. Task icons for unpinned applications will be placed before this separator.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
   </property>
   <property name="text">
    <string>Add Separator</string>
   </property>
   <property name="icon">
    <iconset theme="list-add"/>
   </property>
  </widget>
  <widget class="QComboBox" name="systemCommands">
   <property name="geometry">
    <rect>
     <x>420</x>
     <y>85</y>
     <width>361</width>
     <height>44</height>
    </rect>
   </property>
   <property name="frame">
    <bool>true</bool>
   </property>
   <item>
    <property name="text">
     <string>Add System Command</string>
    </property>
   </item>
  </widget>
  <widget class="QPushButton" name="addLauncherSeparator">
   <property name="geometry">
    <rect>
     <x>420</x>
     <y>245</y>
     <width>361</width>
     <height>40</height>
    </rect>
   </property>
   <property name="toolTip">
    <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;A launcher separator. Task icons for unpinned applications will be placed after this separator.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
   </property>
   <property name="text">
    <string>Add Launcher Separator</string>
   </property>
   <property name="icon">
    <iconset theme="list-add"/>
   </property>
  </widget>
 </widget>
 <resources/>
 <connections>
  <connection>
   <sender>buttonBox</sender>
   <signal>accepted()</signal>
   <receiver>EditLaunchersDialog</receiver>
   <slot>accept()</slot>
   <hints>
    <hint type="sourcelabel">
     <x>248</x>
     <y>254</y>
    </hint>
    <hint type="destinationlabel">
     <x>157</x>
     <y>274</y>
    </hint>
   </hints>
  </connection>
  <connection>
   <sender>buttonBox</sender>
   <signal>rejected()</signal>
   <receiver>EditLaunchersDialog</receiver>
   <slot>reject()</slot>
   <hints>
    <hint type="sourcelabel">
     <x>316</x>
     <y>260</y>
    </hint>
    <hint type="destinationlabel">
     <x>286</x>
     <y>274</y>
    </hint>
   </hints>
  </connection>
 </connections>
</ui>
